--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prebuild": "eslint lib test",
-    "build": "rollup -c",
+    "build": "rollup -c rollup.config.js",
     "pretest": "rollup -c rollup.config.test.js",
     "test": "mocha test/rollup-bundle.js",
     "prepublish": "npm run build && npm test"
