--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prebuild": "eslint lib test",
-    "build": "rollup -c rollup.config.js",
-    "pretest": "rollup -c rollup.config.test.js",
+    "sass": "node tasks/sass.js",
+    "scripts": "rollup -c tasks/rollup.config.js",
+    "tags": "rollup -c tasks/rollup.config.tags.js",
+    "pretest": "rollup -c tasks/rollup.config.test.js",
     "test": "mocha temp/test-bundle.js",
-    "prepublish": "npm run build && npm test"
+    "prebuild": "eslint lib test",
+    "build": "npm run sass && npm run scripts && npm run tags",
+    "prepublish": "npm run build && npm test",
+    "server": "node tasks/server.js"
   },
   "author": "",
   "license": "MIT",
@@ -17,11 +21,14 @@
     "babel-preset-es2015-rollup": "^1.1.1",
     "chai": "^3.5.0",
     "eslint": "^1.10.3",
+    "http-server": "^0.9.0",
     "jscs": "^2.10.1",
     "mocha": "^2.4.5",
+    "node-sass": "^3.4.2",
     "rollup": "^0.25.3",
     "rollup-plugin-babel": "^2.3.9",
     "rollup-plugin-multi-entry": "^1.1.0",
+    "rollup-plugin-uglify": "^0.2.0",
     "source-map-support": "^0.4.0"
   }
 }
