--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jscs": "^2.10.1",
     "mocha": "^2.4.5",
     "node-sass": "^3.4.2",
+    "nunjucks": "^2.3.0",
     "rollup": "^0.25.3",
     "rollup-plugin-babel": "^2.3.9",
     "rollup-plugin-multi-entry": "^1.1.0",
