--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "interview-test-rhengles",
   "version": "1.0.0",
-  "description": "",
+  "description": "-",
   "main": "index.js",
   "scripts": {
     "sass": "node tasks/sass.js",
-    "scripts": "rollup -c tasks/rollup.config.js",
-    "pretest": "rollup -c tasks/rollup.config.test.js",
+    "scripts": "node tasks/rollup.js index",
+    "pretest": "node tasks/rollup.js tests",
     "test": "mocha temp/test-bundle.js",
     "pages": "node tasks/pages.js",
-    "prebuild": "eslint lib test",
-    "build": "npm run sass && npm run scripts && npm run pages",
+    "prebuild": "node tasks/jscs.js && eslint lib test tasks",
+    "build": "npm run pages && npm run sass && npm run scripts",
     "prepublish": "npm run build && npm test",
     "server": "node tasks/server.js"
   },
@@ -26,6 +26,7 @@
     "mocha": "^2.4.5",
     "node-sass": "^3.4.2",
     "nunjucks": "^2.3.0",
+    "promise": "^7.1.1",
     "rollup": "^0.25.3",
     "rollup-plugin-babel": "^2.3.9",
     "rollup-plugin-multi-entry": "^1.1.0",
