--- a/package.json
+++ b/package.json
@@ -9,28 +9,30 @@
     "pretest": "node tasks/rollup.js tests",
     "test": "mocha temp/test-bundle.js",
     "pages": "node tasks/pages.js",
+    "templates": "node tasks/templates.js",
     "prebuild": "node tasks/jscs.js && eslint lib test tasks",
-    "build": "npm run pages && npm run sass && npm run scripts",
+    "build": "npm run pages && npm run templates && npm run sass && npm run scripts",
     "prepublish": "npm run build && npm test",
     "server": "node tasks/server.js"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "babel-eslint": "^4.1.8",
+    "babel-eslint": "^6.1.0",
     "babel-preset-es2015-rollup": "^1.1.1",
     "chai": "^3.5.0",
-    "eslint": "^1.10.3",
+    "eslint": "^2.13.1",
     "http-server": "^0.9.0",
-    "jscs": "^2.10.1",
-    "mocha": "^2.4.5",
-    "node-sass": "^3.4.2",
-    "nunjucks": "^2.3.0",
+    "jscs": "^3.0.5",
+    "mocha": "^2.5.3",
+    "node-sass": "^3.8.0",
+    "nunjucks": "^2.4.2",
+    "nunjucks-esm": "0.0.1",
     "promise": "^7.1.1",
-    "rollup": "^0.25.3",
-    "rollup-plugin-babel": "^2.3.9",
-    "rollup-plugin-multi-entry": "^1.1.0",
-    "rollup-plugin-uglify": "^0.2.0",
+    "rollup": "^0.33.0",
+    "rollup-plugin-babel": "^2.6.1",
+    "rollup-plugin-multi-entry": "^1.4.0",
+    "rollup-plugin-uglify": "^1.0.1",
     "source-map-support": "^0.4.0"
   }
 }
