--- a/package.json
+++ b/package.json
@@ -1,24 +1,47 @@
 {
   "name": "interview-test-ember",
-  "version": "0.0.1",
-  "description": "-",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://rhengles@github.com/rhengles/interview-test.git"
-  },
-  "keywords": [
-    "interview",
-    "test",
-    "ember"
-  ],
-  "author": "Rafael Hengles <rhengles@gmail.com>",
+  "version": "0.0.0",
+  "description": "Small description for interview-test-ember goes here",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/rhengles/interview-test/issues"
+  "author": "",
+  "directories": {
+    "doc": "doc",
+    "test": "tests"
   },
-  "homepage": "https://github.com/rhengles/interview-test#readme"
+  "repository": "",
+  "scripts": {
+    "build": "ember build",
+    "start": "ember server",
+    "test": "ember test"
+  },
+  "devDependencies": {
+    "broccoli-asset-rev": "^2.4.5",
+    "broccoli-sass": "^0.7.0",
+    "ember-ajax": "^2.4.1",
+    "ember-cli": "2.12.1",
+    "ember-cli-app-version": "^2.0.0",
+    "ember-cli-babel": "^5.1.7",
+    "ember-cli-dependency-checker": "^1.3.0",
+    "ember-cli-eslint": "^3.0.0",
+    "ember-cli-htmlbars": "^1.1.1",
+    "ember-cli-htmlbars-inline-precompile": "^0.3.6",
+    "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-qunit": "^3.1.0",
+    "ember-cli-shims": "^1.0.2",
+    "ember-cli-sri": "^2.1.0",
+    "ember-cli-uglify": "^1.2.0",
+    "ember-data": "^2.12.0",
+    "ember-export-application-global": "^1.0.5",
+    "ember-load-initializers": "^0.6.0",
+    "ember-localstorage-adapter": "^1.0.0",
+    "ember-resolver": "^2.0.3",
+    "ember-simple-pagination": "^1.0.1",
+    "ember-source": "~2.12.0",
+    "ember-welcome-page": "^2.0.2",
+    "loader.js": "^4.2.3"
+  },
+  "engines": {
+    "node": ">= 4"
+  },
+  "private": true
 }
