--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "ember-load-initializers": "^0.6.0",
     "ember-localstorage-adapter": "^1.0.0",
     "ember-resolver": "^2.0.3",
+    "ember-simple-auth": "^1.2.1",
     "ember-simple-pagination": "^1.0.1",
     "ember-source": "~2.12.0",
     "ember-welcome-page": "^2.0.2",
-    "loader.js": "^4.2.3"
+    "loader.js": "^4.2.3",
+    "torii": "^0.8.2"
   },
   "engines": {
     "node": ">= 4"
