--- a/package.json
+++ b/package.json
@@ -9,5 +9,11 @@
 	"devDependencies": {
 		"@arijs/frontend": "^0.2.5",
 		"vite": "^2.0.5"
+	},
+	"dependencies": {
+		"@arijs/vue-prerender": "^0.0.3",
+		"@vue/compiler-dom": "^3.0.7",
+		"rollup": "^2.40.0",
+		"vue": "^3.0.7"
 	}
 }
