--- a/package.json
+++ b/package.json
@@ -1,19 +1,29 @@
 {
 	"name": "interview-test",
 	"version": "0.0.0",
-	"scripts": {
-		"dev": "vite",
-		"build": "vite build",
-		"serve": "vite preview"
+	"repository": {
+		"type": "git",
+		"url": "git+ssh://git@github.com:rhengles/interview-test.git"
 	},
-	"devDependencies": {
-		"@arijs/frontend": "^0.2.5",
-		"vite": "^2.0.5"
+	"author": "Rafael Hengles <rhengles@gmail.com>",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/rhengles/interview-test/issues"
+	},
+	"homepage": "https://github.com/rhengles/interview-test#readme",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node task/localhost.js",
+		"prerender": "node task/prerender.mjs"
 	},
 	"dependencies": {
+		"@arijs/frontend": "^0.2.6",
 		"@arijs/vue-prerender": "^0.0.3",
 		"@vue/compiler-dom": "^3.0.7",
-		"rollup": "^2.40.0",
-		"vue": "^3.0.7"
+		"@vue/server-renderer": "^3.0.7",
+		"express": "^4.17.1",
+		"terser": "^5.5.1",
+		"vue": "^3.0.7",
+		"vue-router": "^4.0.4"
 	}
 }
